fix: Make input placeholder text fit on mobile devices
Widened sidebar to make zip placeholder fit, and
changed value of the filter placeholder so it
fits on mobile devices.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,7 +124,7 @@ li {
   .sidebar {
     left: 0.4em;
     top: 0.4em;
-    width: 190px;
+    width: 200px;
   }
 
   li {
